--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  /* font-family: Arial, sans-serif; */
   font-family: 'Lucida Console', Monaco, monospace;
   background-color: #000;
   color: #ffba4c;
@@ -9,7 +8,9 @@ body {
 }
 
 a {
-  color: #ffba4c
+  color: #ffba4c;
+  text-decoration-line: none;
+  /* text-decoration-style: solid; */
 }
 
 header {
@@ -65,6 +66,7 @@ header {
 }
 
 .di4 {
+  margin-top: -5px;
   margin-left: -24px;
 }
 
@@ -105,9 +107,29 @@ header {
 
 .back-button {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  height: 100px;
+  width: 100px;
+  top: 0px;
+  left: 0px;
   color: #ffba4c;
-  text-decoration: none;
-  font-size: 36px;
+  font-size: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.journal-entry:hover{
+  text-decoration-line: overline;
+}
+
+.journal-content {
+  margin: 10px 60px;
+  font-size: 20px;
+}
+
+.caption {
+  font-size: 15px;
+  line-height: 28px;
+  margin-bottom: 8px;
+  color: #b87100;
 }
