--- a/style.css
+++ b/style.css
@@ -7,6 +7,22 @@ body {
   font-size: 16px;
 }
 
+#background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+canvas {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 h3 {
   line-height: 21px;
 }
@@ -93,13 +109,19 @@ header {
   text-align: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
+  canvas {
+    width: unset;
+  }
+
   #desktop-icons {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      position: fixed;
+      width: 100vw;
   }
 
   .desktop-icon-link {
