--- a/style.css
+++ b/style.css
@@ -119,8 +119,8 @@ header {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      position: absolute;
       height: 100vh;
-      position: fixed;
       width: 100vw;
   }
 
