--- a/style.css
+++ b/style.css
@@ -146,13 +146,18 @@ header {
   border-radius: 50px;
 }
 
-.journal-entry:hover{
+.journal-entry a:hover{
   text-decoration-line: overline;
 }
 
 .journal-content {
   margin: 10px 60px;
-  font-size: 20px;
+  font-size: 22px;
+}
+
+.journal-entry {
+  font-size: 18px;
+  margin-bottom: 62px;
 }
 
 .journal-content img {
@@ -163,8 +168,7 @@ header {
 
 .caption {
   font-size: 15px;
-  line-height: 28px;
-  margin-bottom: 8px;
+  line-height: 16px;
   color: #b87100;
 }
 
