--- a/gallery.css
+++ b/gallery.css
@@ -77,7 +77,13 @@
 .image-popover img {
   max-width: 80vw;
   max-height: 80vh;
-  margin: 60px;
+  margin: 60px 60px 20px 60px;
+}
+
+.large-image-title {
+  text-align: center;
+  line-height: 20px;
+  margin-bottom: 20px;
 }
 
 .hidden {
