--- a/galleryDetail.css
+++ b/galleryDetail.css
@@ -1,10 +1,19 @@
+/* .header-group {
+  margin-top: 35px;
+} */
 .container {
   display: flex;
-  margin: 0 20px;
+  margin: 0 60px 40px 60px;
+  transition: all 0.5s ease-out;
 }
 .gallery {
   display: flex;
   max-width: 58%;
+  max-height: 606px;
+  overflow: hidden;
+}
+.hidden {
+  display: none;
 }
 #preview-list-ow {
   order: -1;
@@ -12,10 +21,11 @@
 .preview-list {
   width: 90px;
   margin-right: 6px;
+  /* overflow: hidden; */
 }
 .preview-img-content {
-  height: 120px;
-  background: #272727;
+  height: 110px;
+  background: #181818;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -31,10 +41,10 @@
   flex: 1;
   text-align: center;
   height: 100%;
-  background: #272727;
+  background: #181818;
   display: flex;
   align-items: center;
-  min-height: 600px;
+  max-height: 606px;
   overflow: hidden;
 }
 .viewer img {
@@ -44,11 +54,18 @@
   object-fit: contain;
 }
 .viewer:hover img {
-  transform: scale(3.5); /* Scale up the image on hover */
+  transform: scale(3);
 }
 .details {
   flex: 1;
   margin-left: 20px;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    margin: 0 20px 40px 20px;
+    transition: all 0.5s ease-out;
+  }
 }
 
 @media screen and (max-width: 640px) {
@@ -58,6 +75,7 @@
   .gallery {
     flex-direction: column;
     max-width: 100%;
+    min-height: 706px;
   }
   #preview-list-ow {
     order: 1;
