--- a/galleryDetail.css
+++ b/galleryDetail.css
@@ -1,6 +1,3 @@
-/* .header-group {
-  margin-top: 35px;
-} */
 .container {
   display: flex;
   margin: 0 60px 40px 60px;
@@ -19,7 +16,6 @@
   order: -1;
   width: 90px;
   margin-right: 6px;
-  /* overflow: hidden; */
 }
 .preview-img-content {
   height: 110px;
@@ -62,15 +58,11 @@
 }
 .control {
   background-color: rgba(0, 0, 0, 0.5);
-  color: white;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 30px;
-  width: 30px; */
   position: absolute;
-  /* position: relative; */
   z-index: 10;
   user-select: none;
   display: none;
@@ -79,37 +71,62 @@
 .control-up,
 .control-down {
   width: 90px;
-  height: 30px;
+  height: 38px;
 }
 
-/* .control-up {
-  top: 1px;
-} */
+.control-up {
+  transform: rotateY(90);
+}
 
 .control-down {
-  /* margin-top: auto; */
-  /* bottom: 35px; */
-  transform: translateY(-36px);
+  transform: translateY(-41px);
+}
+
+.d1 {
+  height: 20px;
+  overflow: hidden;
+}
+
+.d2 {
+  transform: translateY(-8px) rotate(90deg);
+}
+
+.u1 {
+  height: 20px;
+  overflow: hidden;
+}
+
+.u2 {
+  transform: translateY(6px) rotate(-90deg);
 }
 
 .control-left,
 .control-right {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  width: 30px;
+  width: 38px;
   height: 120px;
   transform: translateY(-100%);
 }
 
-/* .control-left {
-  left: 20px;
-} */
-
 .control-right {
   right: 20px;
-  /* right: 100px; */
-  /* margin-left: auto; */
+}
+
+.l1 {
+  width: 20px;
+  overflow: hidden;
+}
+
+.l2 {
+  transform: translateX(14px) rotate(180deg);
+}
+
+.r1 {
+  width: 20px;
+  overflow: hidden;
+}
+
+.r2 {
+  transform: translateX(-14px);
 }
 
 @media screen and (max-width: 1024px) {
