--- a/style.css
+++ b/style.css
@@ -147,12 +147,24 @@ hr {
   top: 0px;
   left: 0px;
   color: #ffba4c;
-  font-size: 42px;
+  font-size: 28px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50px;
-  z-index: 999;
+}
+
+.back-button:hover{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.bl {
+  width: 34px;
+  overflow: hidden;
+}
+
+.bl2 {
+  transform: translateX(26px) rotate(180deg);
 }
 
 .journal-entry a:hover{
