--- a/gallery.css
+++ b/gallery.css
@@ -19,6 +19,10 @@
   margin: 40px 0 0 0;
 }
 
+.gallery-message {
+  margin: 20px;
+}
+
 .tabs {
   display: flex;
   justify-content: space-between;
