--- a/galleryDetail.css
+++ b/galleryDetail.css
@@ -28,7 +28,8 @@ h2 {
   border: 3.5px solid #b87100;
 }
 .preview-list img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   user-select: none;
 }
 .viewer {
@@ -38,7 +39,6 @@ h2 {
   background: #181818;
   display: flex;
   align-items: center;
-  max-height: 606px;
   overflow: hidden;
 }
 .viewer img {
@@ -70,7 +70,6 @@ h2 {
 }
 .shop-links-content a:hover {
   text-decoration-line: overline;
-  /* text-underline-position: above; */
 }
 .details {
   flex: 1;
@@ -99,7 +98,7 @@ h2 {
 }
 
 .control-down {
-  transform: translateY(-41px);
+  transform: translateY(-38px);
 }
 
 .d1 {
@@ -173,11 +172,14 @@ h2 {
   }
   .control-up,
   .control-down {
-      display: none;
+    display: none;
   }
 
   .control-left,
   .control-right {
-      display: flex;
+    display: flex;
+  }
+  h2 {
+    margin-top: 22px;
   }
 }
