--- a/galleryDetail.css
+++ b/galleryDetail.css
@@ -26,6 +26,7 @@ h2 {
   display: flex;
   align-items: center;
   border: 3.5px solid transparent;
+  justify-content: center;
 }
 .preview-img-content-active {
   border: 3.5px solid #b87100;
