--- a/galleryDetail.css
+++ b/galleryDetail.css
@@ -45,6 +45,7 @@ h2 {
   align-items: center;
   overflow: hidden;
   max-height: 606px;
+  justify-content: center;
 }
 .viewer img {
   width: 100%;
