overlay bahind open gallery items

--- a/gallery.css
+++ b/gallery.css
@@ -1,3 +1,10 @@
+.gallery-overlay {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
