--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Lucida Console', Monaco, monospace;
   background-color: #000;
   color: #ffba4c;
+  /* color: #ffb300; */
   margin: 0;
   padding: 0;
   font-size: 16px;
